tests/snapshots/sqlparser_snapshot__generic__tpch_14.sql.snap
---
source: tests/sqlparser_snapshot.rs
expression: stmts
---
- Query:
    with: ~
    body:
      Select:
        distinct: ~
        top: ~
        projection:
          - ExprWithAlias:
              expr:
                BinaryOp:
                  left:
                    BinaryOp:
                      left:
                        Value:
                          Number:
                            - "100.00"
                            - false
                      op: Multiply
                      right:
                        Function:
                          name:
                            - value: sum
                              quote_style: ~
                          args:
                            - Unnamed:
                                Expr:
                                  Case:
                                    operand: ~
                                    conditions:
                                      - Like:
                                          negated: false
                                          expr:
                                            Identifier:
                                              value: p_type
                                              quote_style: ~
                                          pattern:
                                            Value:
                                              SingleQuotedString: PROMO%
                                          escape_char: ~
                                    results:
                                      - BinaryOp:
                                          left:
                                            Identifier:
                                              value: l_extendedprice
                                              quote_style: ~
                                          op: Multiply
                                          right:
                                            Nested:
                                              BinaryOp:
                                                left:
                                                  Value:
                                                    Number:
                                                      - "1"
                                                      - false
                                                op: Minus
                                                right:
                                                  Identifier:
                                                    value: l_discount
                                                    quote_style: ~
                                    else_result:
                                      Value:
                                        Number:
                                          - "0"
                                          - false
                          filter: ~
                          null_treatment: ~
                          over: ~
                          distinct: false
                          special: false
                          order_by: []
                  op: Divide
                  right:
                    Function:
                      name:
                        - value: sum
                          quote_style: ~
                      args:
                        - Unnamed:
                            Expr:
                              BinaryOp:
                                left:
                                  Identifier:
                                    value: l_extendedprice
                                    quote_style: ~
                                op: Multiply
                                right:
                                  Nested:
                                    BinaryOp:
                                      left:
                                        Value:
                                          Number:
                                            - "1"
                                            - false
                                      op: Minus
                                      right:
                                        Identifier:
                                          value: l_discount
                                          quote_style: ~
                      filter: ~
                      null_treatment: ~
                      over: ~
                      distinct: false
                      special: false
                      order_by: []
              alias:
                value: promo_revenue
                quote_style: ~
        into: ~
        from:
          - relation:
              Table:
                name:
                  - value: lineitem
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
          - relation:
              Table:
                name:
                  - value: part
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
        lateral_views: []
        selection:
          BinaryOp:
            left:
              BinaryOp:
                left:
                  BinaryOp:
                    left:
                      Identifier:
                        value: l_partkey
                        quote_style: ~
                    op: Eq
                    right:
                      Identifier:
                        value: p_partkey
                        quote_style: ~
                op: And
                right:
                  BinaryOp:
                    left:
                      Identifier:
                        value: l_shipdate
                        quote_style: ~
                    op: GtEq
                    right:
                      TypedString:
                        data_type: Date
                        value: 1995-09-01
            op: And
            right:
              BinaryOp:
                left:
                  Identifier:
                    value: l_shipdate
                    quote_style: ~
                op: Lt
                right:
                  BinaryOp:
                    left:
                      TypedString:
                        data_type: Date
                        value: 1995-09-01
                    op: Plus
                    right:
                      Interval:
                        value:
                          Value:
                            SingleQuotedString: "1"
                        leading_field: Month
                        leading_precision: ~
                        last_field: ~
                        fractional_seconds_precision: ~
        group_by:
          Expressions: []
        cluster_by: []
        distribute_by: []
        sort_by: []
        having: ~
        named_window: []
        qualify: ~
    order_by: []
    limit: ~
    limit_by: []
    offset: ~
    fetch: ~
    locks: []

