tests/snapshots/sqlparser_snapshot__generic__tpch_18.sql.snap
---
source: tests/sqlparser_snapshot.rs
expression: stmts
---
- Query:
    with: ~
    body:
      Select:
        distinct: ~
        top: ~
        projection:
          - UnnamedExpr:
              Identifier:
                value: c_name
                quote_style: ~
          - UnnamedExpr:
              Identifier:
                value: c_custkey
                quote_style: ~
          - UnnamedExpr:
              Identifier:
                value: o_orderkey
                quote_style: ~
          - UnnamedExpr:
              Identifier:
                value: o_orderdate
                quote_style: ~
          - UnnamedExpr:
              Identifier:
                value: o_totalprice
                quote_style: ~
          - UnnamedExpr:
              Function:
                name:
                  - value: sum
                    quote_style: ~
                args:
                  - Unnamed:
                      Expr:
                        Identifier:
                          value: l_quantity
                          quote_style: ~
                filter: ~
                null_treatment: ~
                over: ~
                distinct: false
                special: false
                order_by: []
        into: ~
        from:
          - relation:
              Table:
                name:
                  - value: customer
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
          - relation:
              Table:
                name:
                  - value: orders
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
          - relation:
              Table:
                name:
                  - value: lineitem
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
        lateral_views: []
        selection:
          BinaryOp:
            left:
              BinaryOp:
                left:
                  InSubquery:
                    expr:
                      Identifier:
                        value: o_orderkey
                        quote_style: ~
                    subquery:
                      with: ~
                      body:
                        Select:
                          distinct: ~
                          top: ~
                          projection:
                            - UnnamedExpr:
                                Identifier:
                                  value: l_orderkey
                                  quote_style: ~
                          into: ~
                          from:
                            - relation:
                                Table:
                                  name:
                                    - value: lineitem
                                      quote_style: ~
                                  alias: ~
                                  args: ~
                                  with_hints: []
                                  version: ~
                                  partitions: []
                              joins: []
                          lateral_views: []
                          selection: ~
                          group_by:
                            Expressions:
                              - Identifier:
                                  value: l_orderkey
                                  quote_style: ~
                          cluster_by: []
                          distribute_by: []
                          sort_by: []
                          having:
                            BinaryOp:
                              left:
                                Function:
                                  name:
                                    - value: sum
                                      quote_style: ~
                                  args:
                                    - Unnamed:
                                        Expr:
                                          Identifier:
                                            value: l_quantity
                                            quote_style: ~
                                  filter: ~
                                  null_treatment: ~
                                  over: ~
                                  distinct: false
                                  special: false
                                  order_by: []
                              op: Gt
                              right:
                                Value:
                                  Number:
                                    - "300"
                                    - false
                          named_window: []
                          qualify: ~
                      order_by: []
                      limit: ~
                      limit_by: []
                      offset: ~
                      fetch: ~
                      locks: []
                    negated: false
                op: And
                right:
                  BinaryOp:
                    left:
                      Identifier:
                        value: c_custkey
                        quote_style: ~
                    op: Eq
                    right:
                      Identifier:
                        value: o_custkey
                        quote_style: ~
            op: And
            right:
              BinaryOp:
                left:
                  Identifier:
                    value: o_orderkey
                    quote_style: ~
                op: Eq
                right:
                  Identifier:
                    value: l_orderkey
                    quote_style: ~
        group_by:
          Expressions:
            - Identifier:
                value: c_name
                quote_style: ~
            - Identifier:
                value: c_custkey
                quote_style: ~
            - Identifier:
                value: o_orderkey
                quote_style: ~
            - Identifier:
                value: o_orderdate
                quote_style: ~
            - Identifier:
                value: o_totalprice
                quote_style: ~
        cluster_by: []
        distribute_by: []
        sort_by: []
        having: ~
        named_window: []
        qualify: ~
    order_by:
      - expr:
          Identifier:
            value: o_totalprice
            quote_style: ~
        asc: false
        nulls_first: ~
      - expr:
          Identifier:
            value: o_orderdate
            quote_style: ~
        asc: ~
        nulls_first: ~
    limit: ~
    limit_by: []
    offset: ~
    fetch: ~
    locks: []

